cmake_minimum_required(VERSION 3.17)
project(cppStudy)

set(CMAKE_CXX_STANDARD 20)

add_executable(cppStudy main.cpp)
ADD_SUBDIRECTORY(coreCPP)
ADD_SUBDIRECTORY(cppProject)
ADD_SUBDIRECTORY(staffGovSystem)
ADD_SUBDIRECTORY(studyNotes)
ADD_SUBDIRECTORY(jifangyuyve)
ADD_SUBDIRECTORY(yanjiangbisai)



